coverted best/worst draft stat to use raw yahoo api requests, no yfpy. Need to create fuction for metrics.py

--- a/notebooks/adam.ipynb
+++ b/notebooks/adam.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,41 +137,6 @@
    "outputs": [],
    "source": [
     "BASE_URL = \"https://fantasysports.yahooapis.com/fantasy/v2\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def api_request(url):\n",
-    "    if not oauth.token_is_valid():\n",
-    "        oauth.refresh_access_token()\n",
-    "    headers = {\n",
-    "        \"Authorization\": f\"Bearer {oauth.access_token}\",\n",
-    "        \"Content-Type\": \"application/json\"\n",
-    "    }\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    if response.status_code != 200:\n",
-    "        print(response.text)\n",
-    "        response.raise_for_status()\n",
-    "    xml = response.text\n",
-    "    data = xml_to_dict(response.text)[\"fantasy_content\"]\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_league():\n",
-    "#     league_key = f\"{game_id}.l.{league_id}\"\n",
-    "#     url = f\"{BASE_URL}/league/{league_key};out=standings\"\n",
-    "#     resp_data = api_request(url)[\"league\"]\n",
-    "#     return resp_data"
    ]
   },
   {
@@ -287,10 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''USES YFPY'''\n",
+    "\n",
     "def get_full_scoring_df():\n",
     "    league_settings = query.get_league_settings()\n",
     "    scoring_categories = league_settings.stat_categories.stats\n",
@@ -306,69 +273,10 @@
     "\n",
     "\n",
     "def get_scoring_dict_by_stat_id(scoring_settings_df):\n",
-    "    return {str(scoring_settings_df['stat_id'][i]) : float(scoring_settings_df['value'][i]) for i in range(len(scoring_settings_df))}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LEAGUE_SETTINGS = query.get_league_settings()\n",
-    "# SCORING_CATEGORIES = LEAGUE_SETTINGS.stat_categories.stats\n",
-    "# for i in range(len(SCORING_CATEGORIES)):\n",
-    "#     SCORING_CATEGORIES[i] = SCORING_CATEGORIES[i].clean_data_dict()\n",
-    "# SCORING_CATEGORIES = pd.DataFrame(data=SCORING_CATEGORIES)\n",
+    "    return {str(scoring_settings_df['stat_id'][i]) : float(scoring_settings_df['value'][i]) for i in range(len(scoring_settings_df))}\n",
     "\n",
-    "# SCORING_MODIFIERS = LEAGUE_SETTINGS.stat_modifiers.stats\n",
-    "# SCORING_MODIFIERS = [SCORING_MODIFIERS[i].clean_data_dict() for i in range(len(SCORING_MODIFIERS))]\n",
-    "\n",
-    "# SCORING_SETTINGS = pd.merge(left=SCORING_CATEGORIES, right=pd.DataFrame(data=SCORING_MODIFIERS), on='stat_id', how='inner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "SCORING_SETTINGS = get_full_scoring_df()\n",
     "SCORING_MODIFIERS_BY_STAT_ID = get_scoring_dict_by_stat_id(SCORING_SETTINGS)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Seperate Draft into by Team"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# full_draft = pd.DataFrame(data=full_draft, columns=['Overall', 'Round', 'Team ID', 'Player ID'])\n",
-    "url = f\"/league/{query.league_key}/draftresults\"\n",
-    "response = await query.get_response(url)\n",
-    "full_draft = response['league']['draft_results']\n",
-    "# print(full_draft[0])\n",
-    "team_drafts = {}\n",
-    "team_keys = []\n",
-    "for ID in range(1, full_draft['Team ID'].nunique()+1):\n",
-    "    team_keys = [LEAGUE_KEY + '.t.' + str(ID) for ID in range(1, full_draft['Team ID'].nunique()+1)] \n",
-    "team_keys = tuple(team_keys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_drafts = {team_key : full_draft[full_draft['Team ID'] == team_key] for team_key in team_keys}"
    ]
   },
   {
@@ -380,24 +288,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next((i for i, t in enumerate(query.teams) if t[\"name\"] == team), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best drafts are...\n",
-      "1. Tim's Terrific Team (5554.2)\n",
-      "2. Theodore's Poo Poo Hospital (5315.4)\n",
-      "3. Eric’s a Bitch Team (5312.0)\n",
-      "4. eric's Awe-Inspiring Team (5007.2)\n",
-      "\n",
-      "The worst drafts are...\n",
-      "1. Miami Steamrollers (4597.7)\n",
-      "2. Kevin's Incredible Team (4597.7)\n",
-      "3. Cyrus's Cursed Team (4597.7)\n",
-      "4. adam2 (4597.7)\n"
+      "[{'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
+      "  'main_text': \"Tim's Terrific Team\",\n",
+      "  'rank': 1,\n",
+      "  'stat': 5554.2,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+      "  'main_text': \"Theodore's Poo Poo Hospital\",\n",
+      "  'rank': 2,\n",
+      "  'stat': 5315.4,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
+      "  'main_text': 'Eric’s a Bitch Team',\n",
+      "  'rank': 3,\n",
+      "  'stat': 5312.0,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
+      "  'main_text': \"eric's Awe-Inspiring Team\",\n",
+      "  'rank': 4,\n",
+      "  'stat': 5007.2,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_8_a.png',\n",
+      "  'main_text': 'adam2',\n",
+      "  'rank': 5,\n",
+      "  'stat': 5002.5,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
+      "  'main_text': \"Cyrus's Cursed Team\",\n",
+      "  'rank': 6,\n",
+      "  'stat': 4866.1,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
+      "  'main_text': \"Kevin's Incredible Team\",\n",
+      "  'rank': 7,\n",
+      "  'stat': 4675.8,\n",
+      "  'sub_text': ''},\n",
+      " {'image_url': 'https://yahoofantasysports-res.cloudinary.com/image/upload/t_s192sq/fantasy-logos/487f5795c5a24fc01ad380d9da51fb26e062fd152c0060b938512522089524b1.png',\n",
+      "  'main_text': 'Miami Steamrollers',\n",
+      "  'rank': 8,\n",
+      "  'stat': 4597.7,\n",
+      "  'sub_text': ''}]\n"
      ]
     }
    ],
@@ -405,37 +362,108 @@
     "'''\n",
     "Best/Worst Draft\n",
     "'''\n",
+    "# full_draft = pd.DataFrame(data=full_draft, columns=['Overall', 'Round', 'Team ID', 'Player ID'])\n",
+    "url = f\"/league/{query.league_key}/draftresults\"\n",
+    "response = await query.get_response(url)\n",
+    "full_draft = response['league']['draft_results']\n",
+    "# for pick in full_draft:\n",
+    "#     pick['pick'] = int(pick['pick'])\n",
+    "#     pick['round'] = int(pick['round'])\n",
+    "    # print(pick)\n",
+    "full_draft = pd.DataFrame(data=full_draft, columns=['pick', 'round', 'team_key', 'player_key'])\n",
+    "teams = query.get_teams()\n",
+    "# pprint(teams)\n",
+    "team_keys = tuple(teams.keys())\n",
+    "\n",
+    "team_drafts = {query.get_team_name_from_key(team_key) : full_draft[full_draft[\"team_key\"] == team_key] for team_key in team_keys}\n",
+    "\n",
     "total_draft_points = dict.fromkeys(team_keys, 0)\n",
-    "for team in team_drafts:\n",
-    "    # pull each team draft \n",
-    "    draft = list(team_drafts[team]['Player ID'])\n",
-    "    stats = get_players(player_keys=draft)\n",
-    "    \n",
+    "\n",
+    "ranked_drafts_list = []\n",
+    "i=0\n",
+    "for team, draft in team_drafts.items():\n",
+    "    stats = await query.get_players(player_keys=draft[\"player_key\"])\n",
+    "    ranked_drafts_list.append(\n",
+    "        {\n",
+    "            \"rank\": 0,\n",
+    "            \"image_url\": query.teams[next((i for i, t in enumerate(query.teams) if t[\"name\"] == team), None)][\"team_logos\"][\"team_logo\"][\"url\"],\n",
+    "            \"main_text\": team,\n",
+    "            \"sub_text\": \"\",\n",
+    "            \"stat\": 0\n",
+    "        }\n",
+    "    )\n",
+    "    i+=1\n",
     "    for j in range(len(draft)):\n",
-    "        # pull each player from the draft\n",
-    "        # pull each player's stats\n",
-    "        player_stats = stats[j].player_stats.clean_data_dict()['stats']\n",
-    "        \n",
-    "        for i in range(len(player_stats)):\n",
-    "            # pull league scoring settings\n",
-    "            # multiply league settings by player's stats\n",
-    "            stat = player_stats[i]['stat'].clean_data_dict()\n",
-    "            if str(stat['stat_id']) in list(SCORING_MODIFIERS_BY_STAT_ID.keys()):\n",
-    "                total_draft_points[team] += stat['value'] * SCORING_MODIFIERS_BY_STAT_ID[str(stat['stat_id'])] #list(SCORING_SETTINGS['value'])[list(SCORING_SETTINGS['stat_id']).index(stat['stat_id'])]\n",
+    "        ranked_drafts_list[len(ranked_drafts_list)-1][\"stat\"] += round(float(stats[j][\"player_points\"][0][\"total\"]), 1)\n",
     "\n",
-    "total_draft_points = {key : round(value, 1) for key, value in total_draft_points.items()}\n",
-    "total_draft_points = dict(sorted(total_draft_points.items(), key=lambda item: item[1], reverse=True))\n",
-    "total_draft_points = {key : (get_team_name(key), value) for key, value in total_draft_points.items()}\n",
+    "ranked_drafts_list = sorted(ranked_drafts_list, key=lambda item: list(item.items())[4][1], reverse=True)\n",
     "\n",
-    "top_x = 4\n",
-    "print('The best drafts are...')\n",
-    "for i in range(top_x):\n",
-    "    print(f'{i+1}. {list(total_draft_points.values())[i][0]} ({str(list(total_draft_points.values())[i][1])})')\n",
-    "print('')\n",
+    "rank=1\n",
+    "for draft in ranked_drafts_list:\n",
+    "    draft[\"rank\"] = rank\n",
+    "    draft[\"stat\"] = round(draft[\"stat\"], 1)\n",
+    "    rank+=1\n",
     "\n",
-    "print('The worst drafts are...')\n",
-    "for i in range(top_x):\n",
-    "    print(f'{i+1}. {list(total_draft_points.values())[len(total_draft_points)-i-1][0]} ({str(list(total_draft_points.values())[len(total_draft_points)-1][1])})')"
+    "pprint(ranked_drafts_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
+       "  'main_text': \"Tim's Terrific Team\",\n",
+       "  'sub_text': '',\n",
+       "  'stat': 5554.2},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+       "  'main_text': \"Theodore's Poo Poo Hospital\",\n",
+       "  'sub_text': '',\n",
+       "  'stat': 5315.400000000001},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
+       "  'main_text': 'Eric’s a Bitch Team',\n",
+       "  'sub_text': '',\n",
+       "  'stat': 5312.000000000001},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
+       "  'main_text': \"eric's Awe-Inspiring Team\",\n",
+       "  'sub_text': '',\n",
+       "  'stat': 5007.2},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_8_a.png',\n",
+       "  'main_text': 'adam2',\n",
+       "  'sub_text': '',\n",
+       "  'stat': 5002.5},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
+       "  'main_text': \"Cyrus's Cursed Team\",\n",
+       "  'sub_text': '',\n",
+       "  'stat': 4866.099999999999},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
+       "  'main_text': \"Kevin's Incredible Team\",\n",
+       "  'sub_text': '',\n",
+       "  'stat': 4675.799999999999},\n",
+       " {'rank': 0,\n",
+       "  'image_url': 'https://yahoofantasysports-res.cloudinary.com/image/upload/t_s192sq/fantasy-logos/487f5795c5a24fc01ad380d9da51fb26e062fd152c0060b938512522089524b1.png',\n",
+       "  'main_text': 'Miami Steamrollers',\n",
+       "  'sub_text': '',\n",
+       "  'stat': 4597.700000000001}]"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(ranked_drafts_list, key=lambda item: list(item.items())[4][1], reverse=True)"
    ]
   },
   {
@@ -447,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,13 +514,84 @@
     "        {\n",
     "            \"rank\": i+1,\n",
     "            \"image_url\": players[i]['image_url'],\n",
-    "            \"main_text\": list(drops.values())[i][1],\n",
+    "            \"main_text\": list(drops.values())[i][0],\n",
     "            \"sub_test\": \"\",\n",
-    "            \"stat\": list(drops.values())[i][0]\n",
+    "            \"stat\": list(drops.values())[i][1]\n",
     "         } for i in range(top_x)\n",
     "    ]\n",
     "    \n",
     "    return top_drops_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'most_dropped',\n",
+       "  'data': [{'rank': 1,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/jKwQ9jvG0kHwy.T4LpPgeg--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/8290.png',\n",
+       "    'main_text': 'Matt Boldy',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '7 add/drops'},\n",
+       "   {'rank': 2,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/Lwy0Z2iRU0WNAGYUUE3AUw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10022024/7569.png',\n",
+       "    'main_text': 'Ukko-Pekka Luukkonen',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '6 add/drops'},\n",
+       "   {'rank': 3,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/p4WEbLzDBns54AxK0Z1nwA--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10172024/5986.png',\n",
+       "    'main_text': 'Darnell Nurse',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '5 add/drops'},\n",
+       "   {'rank': 4,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/p0PpC1C4ztL_hr0ohNVgvQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10042024/7124.png',\n",
+       "    'main_text': 'Jakob Chychrun',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '5 add/drops'},\n",
+       "   {'rank': 5,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/5w7M9fUrSnNfs3iMh_3E4A--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10152024/4947.png',\n",
+       "    'main_text': 'Jacob Markstrom',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '5 add/drops'},\n",
+       "   {'rank': 6,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/Pz0STjc5z5Vdsn3OgkSVnw--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10112024/3358.png',\n",
+       "    'main_text': 'Brent Burns',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '5 add/drops'},\n",
+       "   {'rank': 7,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/RpZgznk1Tz7CXof.27hPGQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/4002.png',\n",
+       "    'main_text': 'Claude Giroux',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '5 add/drops'},\n",
+       "   {'rank': 8,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/bWUhRD8Nd6G1.aBSVk548g--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10082024/5020.png',\n",
+       "    'main_text': 'Tyler Toffoli',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '4 add/drops'},\n",
+       "   {'rank': 9,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/X5JDoMuBl7KT5Lc1cFdj7Q--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10032024/6764.png',\n",
+       "    'main_text': 'Ilya Samsonov',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '4 add/drops'},\n",
+       "   {'rank': 10,\n",
+       "    'image_url': 'https://s.yimg.com/iu/api/res/1.2/3faJojNPyTC3LeXyuGNEjQ--~C/YXBwaWQ9eXNwb3J0cztjaD0yMzM2O2NyPTE7Y3c9MTc5MDtkeD04NTc7ZHk9MDtmaT11bGNyb3A7aD02MDtxPTEwMDt3PTQ2/https://s.yimg.com/xe/i/us/sp/v/nhl_cutout/players_l/10162024/7636.png',\n",
+       "    'main_text': 'Drake Batherson',\n",
+       "    'sub_test': '',\n",
+       "    'stat': '4 add/drops'}]}]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics = Metrics(query)\n",
+    "await metrics.get_most_dropped_players()"
    ]
   },
   {
