--- a/notebooks/adam.ipynb
+++ b/notebooks/adam.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,162 +308,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
-      "  'main_text': \"Tim's Terrific Team\",\n",
-      "  'rank': 1,\n",
-      "  'stat': 5554.2,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
-      "  'main_text': \"Theodore's Poo Poo Hospital\",\n",
-      "  'rank': 2,\n",
-      "  'stat': 5315.4,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
-      "  'main_text': 'Eric’s a Bitch Team',\n",
-      "  'rank': 3,\n",
-      "  'stat': 5312.0,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
-      "  'main_text': \"eric's Awe-Inspiring Team\",\n",
-      "  'rank': 4,\n",
-      "  'stat': 5007.2,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_8_a.png',\n",
-      "  'main_text': 'adam2',\n",
-      "  'rank': 5,\n",
-      "  'stat': 5002.5,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
-      "  'main_text': \"Cyrus's Cursed Team\",\n",
-      "  'rank': 6,\n",
-      "  'stat': 4866.1,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
-      "  'main_text': \"Kevin's Incredible Team\",\n",
-      "  'rank': 7,\n",
-      "  'stat': 4675.8,\n",
-      "  'sub_text': ''},\n",
-      " {'image_url': 'https://yahoofantasysports-res.cloudinary.com/image/upload/t_s192sq/fantasy-logos/487f5795c5a24fc01ad380d9da51fb26e062fd152c0060b938512522089524b1.png',\n",
-      "  'main_text': 'Miami Steamrollers',\n",
-      "  'rank': 8,\n",
-      "  'stat': 4597.7,\n",
-      "  'sub_text': ''}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Best/Worst Draft\n",
     "'''\n",
-    "# full_draft = pd.DataFrame(data=full_draft, columns=['Overall', 'Round', 'Team ID', 'Player ID'])\n",
-    "url = f\"/league/{query.league_key}/draftresults\"\n",
-    "response = await query.get_response(url)\n",
-    "full_draft = response['league']['draft_results']\n",
-    "# for pick in full_draft:\n",
-    "#     pick['pick'] = int(pick['pick'])\n",
-    "#     pick['round'] = int(pick['round'])\n",
-    "    # print(pick)\n",
-    "full_draft = pd.DataFrame(data=full_draft, columns=['pick', 'round', 'team_key', 'player_key'])\n",
-    "teams = query.get_teams()\n",
-    "# pprint(teams)\n",
-    "team_keys = tuple(teams.keys())\n",
-    "\n",
-    "team_drafts = {query.get_team_name_from_key(team_key) : full_draft[full_draft[\"team_key\"] == team_key] for team_key in team_keys}\n",
-    "\n",
-    "total_draft_points = dict.fromkeys(team_keys, 0)\n",
-    "\n",
-    "ranked_drafts_list = []\n",
-    "i=0\n",
-    "for team, draft in team_drafts.items():\n",
-    "    stats = await query.get_players(player_keys=draft[\"player_key\"])\n",
-    "    ranked_drafts_list.append(\n",
-    "        {\n",
-    "            \"rank\": 0,\n",
-    "            \"image_url\": query.teams[next((i for i, t in enumerate(query.teams) if t[\"name\"] == team), None)][\"team_logos\"][\"team_logo\"][\"url\"],\n",
-    "            \"main_text\": team,\n",
-    "            \"sub_text\": \"\",\n",
-    "            \"stat\": 0\n",
-    "        }\n",
-    "    )\n",
-    "    i+=1\n",
-    "    for j in range(len(draft)):\n",
-    "        ranked_drafts_list[len(ranked_drafts_list)-1][\"stat\"] += round(float(stats[j][\"player_points\"][0][\"total\"]), 1)\n",
-    "\n",
-    "ranked_drafts_list = sorted(ranked_drafts_list, key=lambda item: list(item.items())[4][1], reverse=True)\n",
-    "\n",
-    "rank=1\n",
-    "for draft in ranked_drafts_list:\n",
-    "    draft[\"rank\"] = rank\n",
-    "    draft[\"stat\"] = round(draft[\"stat\"], 1)\n",
-    "    rank+=1\n",
-    "\n",
-    "pprint(ranked_drafts_list)\n"
+    "async def get_best_worst_drafts():\n",
+    "    url = f\"/league/{query.league_key}/draftresults\"\n",
+    "    response = await query.get_response(url)\n",
+    "    full_draft = response['league']['draft_results']\n",
+    "    full_draft = pd.DataFrame(data=full_draft, columns=['pick', 'round', 'team_key', 'player_key'])\n",
+    "    teams = query.get_teams()\n",
+    "    team_keys = tuple(teams.keys())\n",
+    "    team_drafts = {query.get_team_name_from_key(team_key) : full_draft[full_draft[\"team_key\"] == team_key] for team_key in team_keys}\n",
+    "    ranked_drafts_list = []\n",
+    "    i=0\n",
+    "    for team, draft in team_drafts.items():\n",
+    "        stats = await query.get_players(player_keys=draft[\"player_key\"])\n",
+    "        ranked_drafts_list.append(\n",
+    "            {\n",
+    "                \"rank\": 0,\n",
+    "                \"image_url\": query.teams[next((i for i, t in enumerate(query.teams) if t[\"name\"] == team), None)][\"team_logos\"][\"team_logo\"][\"url\"],\n",
+    "                \"main_text\": team,\n",
+    "                \"sub_text\": \"\",\n",
+    "                \"stat\": 0\n",
+    "            }\n",
+    "        )\n",
+    "        i+=1\n",
+    "        for j in range(len(draft)):\n",
+    "            ranked_drafts_list[len(ranked_drafts_list)-1][\"stat\"] += round(float(stats[j][\"player_points\"][0][\"total\"]), 1)\n",
+    "    ranked_drafts_list = sorted(ranked_drafts_list, key=lambda item: list(item.items())[4][1], reverse=True)\n",
+    "    rank=1\n",
+    "    for draft in ranked_drafts_list:\n",
+    "        draft[\"rank\"] = rank\n",
+    "        draft[\"stat\"] = round(draft[\"stat\"], 1)\n",
+    "        rank+=1\n",
+    "    \n",
+    "    return {\"id\": \"best_worst_drafts\",\n",
+    "            \"data\": ranked_drafts_list}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
-       "  'main_text': \"Tim's Terrific Team\",\n",
-       "  'sub_text': '',\n",
-       "  'stat': 5554.2},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
-       "  'main_text': \"Theodore's Poo Poo Hospital\",\n",
-       "  'sub_text': '',\n",
-       "  'stat': 5315.400000000001},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
-       "  'main_text': 'Eric’s a Bitch Team',\n",
-       "  'sub_text': '',\n",
-       "  'stat': 5312.000000000001},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
-       "  'main_text': \"eric's Awe-Inspiring Team\",\n",
-       "  'sub_text': '',\n",
-       "  'stat': 5007.2},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_8_a.png',\n",
-       "  'main_text': 'adam2',\n",
-       "  'sub_text': '',\n",
-       "  'stat': 5002.5},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
-       "  'main_text': \"Cyrus's Cursed Team\",\n",
-       "  'sub_text': '',\n",
-       "  'stat': 4866.099999999999},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
-       "  'main_text': \"Kevin's Incredible Team\",\n",
-       "  'sub_text': '',\n",
-       "  'stat': 4675.799999999999},\n",
-       " {'rank': 0,\n",
-       "  'image_url': 'https://yahoofantasysports-res.cloudinary.com/image/upload/t_s192sq/fantasy-logos/487f5795c5a24fc01ad380d9da51fb26e062fd152c0060b938512522089524b1.png',\n",
-       "  'main_text': 'Miami Steamrollers',\n",
-       "  'sub_text': '',\n",
-       "  'stat': 4597.700000000001}]"
+       "{'id': 'best_worst_drafts',\n",
+       " 'data': [{'rank': 1,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
+       "   'main_text': \"Tim's Terrific Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 5554.2},\n",
+       "  {'rank': 2,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+       "   'main_text': \"Theodore's Poo Poo Hospital\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 5315.4},\n",
+       "  {'rank': 3,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
+       "   'main_text': 'Eric’s a Bitch Team',\n",
+       "   'sub_text': '',\n",
+       "   'stat': 5312.0},\n",
+       "  {'rank': 4,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
+       "   'main_text': \"eric's Awe-Inspiring Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 5007.2},\n",
+       "  {'rank': 5,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_8_a.png',\n",
+       "   'main_text': 'adam2',\n",
+       "   'sub_text': '',\n",
+       "   'stat': 5002.5},\n",
+       "  {'rank': 6,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
+       "   'main_text': \"Cyrus's Cursed Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 4866.1},\n",
+       "  {'rank': 7,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
+       "   'main_text': \"Kevin's Incredible Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 4675.8},\n",
+       "  {'rank': 8,\n",
+       "   'image_url': 'https://yahoofantasysports-res.cloudinary.com/image/upload/t_s192sq/fantasy-logos/487f5795c5a24fc01ad380d9da51fb26e062fd152c0060b938512522089524b1.png',\n",
+       "   'main_text': 'Miami Steamrollers',\n",
+       "   'sub_text': '',\n",
+       "   'stat': 4597.7}]}"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(ranked_drafts_list, key=lambda item: list(item.items())[4][1], reverse=True)"
+    "metrics = Metrics(query)\n",
+    "await metrics.get_best_worst_drafts()"
    ]
   },
   {
