completed biggest blowout matchup stat, added to metrics.py and query.py

--- a/notebooks/adam.ipynb
+++ b/notebooks/adam.ipynb
@@ -13077,7 +13077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -13136,13 +13136,14 @@
        "   'stat': 83.8}]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "await get_biggest_blowout_matchups()"
+    "metrics = Metrics(query)\n",
+    "await metrics.get_biggest_blowout_matchups()"
    ]
   },
   {
