completed rivalry dominance stat. Added to metrics.py and query.py

--- a/notebooks/adam.ipynb
+++ b/notebooks/adam.ipynb
@@ -13033,7 +13033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13053,26 +13053,7 @@
     "            \"stat\": matchups_data_by_point_diff_descen[i]['point_diff']\n",
     "            } for i in range(top_x)\n",
     "        ]\n",
-    "    return {\"id\": \"biggest_blowouts\", \"data\": biggest_blowouts_list}\n",
-    "\n",
-    "# top_x = 10\n",
-    "# num = 1\n",
-    "# print('These teams got BOATRACED these weeks')\n",
-    "# print('The biggest blowouts were...')\n",
-    "# for i in range(len(matchups_data_by_point_diff_ascen)-1, len(matchups_data_by_point_diff_ascen)-top_x-1, -1):\n",
-    "#     if matchups_data_by_point_diff_ascen[i]['point_diff'] > 0:\n",
-    "#         print(f\"{num}. {matchups_data_by_point_diff_ascen[i]['team1_name']} def. {matchups_data_by_point_diff_ascen[i]['team2_name']}\")\n",
-    "#         print(f\"Score: {matchups_data_by_point_diff_ascen[i]['team1_points']}-{matchups_data_by_point_diff_ascen[i]['team2_points']}\") \n",
-    "#         print(f\"Point Differential: {abs(matchups_data_by_point_diff_ascen[i]['point_diff'])}\")\n",
-    "#         print(f\"Week: {matchups_data_by_point_diff_ascen[i]['week']}\")\n",
-    "#     elif matchups_data_by_point_diff_ascen[i]['point_diff'] < 0:\n",
-    "#         print(f\"{num}. {matchups_data_by_point_diff_ascen[i]['team2_name']} def. {matchups_data_by_point_diff_ascen[i]['team1_name']}\")\n",
-    "#         print(f\"Score: {matchups_data_by_point_diff_ascen[i]['team2_points']}-{matchups_data_by_point_diff_ascen[i]['team1_points']}\") \n",
-    "#         print(f\"Point Differential: {abs(matchups_data_by_point_diff_ascen[i]['point_diff'])}\")\n",
-    "#         print(f\"Week: {matchups_data_by_point_diff_ascen[i]['week']}\")\n",
-    "#     print('')\n",
-    "#     num += 1\n",
-    "\n"
+    "    return {\"id\": \"biggest_blowouts\", \"data\": biggest_blowouts_list}"
    ]
   },
   {
@@ -13150,76 +13131,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Some matchups were never fair from the start\n",
-      "The most lopsided season matchups were...\n",
-      "1. Eric’s a Bitch Team def. Miami Steamrollers\n",
-      "Total Score: 592.3-381.6\n",
-      "Total Point Differential: 210.7\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "2. Theodore's Poo Poo Hospital def. Kevin's Incredible Team\n",
-      "Total Score: 623.7-414.7\n",
-      "Total Point Differential: 209.0\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "3. Tim's Terrific Team def. Miami Steamrollers\n",
-      "Total Score: 587.5-406.7\n",
-      "Total Point Differential: 180.8\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "4. Cyrus's Cursed Team def. Kevin's Incredible Team\n",
-      "Total Score: 660.3-480.0\n",
-      "Total Point Differential: 180.3\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "5. eric's Awe-Inspiring Team def. adam2\n",
-      "Total Score: 826.3-659.9\n",
-      "Total Point Differential: 166.4\n",
-      "Includes Playoffs: Yes\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "6. Theodore's Poo Poo Hospital def. Miami Steamrollers\n",
-      "Total Score: 588.3-422.1\n",
-      "Total Point Differential: 166.2\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "7. Theodore's Poo Poo Hospital def. adam2\n",
-      "Total Score: 697.1-531.7\n",
-      "Total Point Differential: 165.4\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "8. Cyrus's Cursed Team def. Miami Steamrollers\n",
-      "Total Score: 564.9-408.1\n",
-      "Total Point Differential: 156.8\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "9. Tim's Terrific Team def. Kevin's Incredible Team\n",
-      "Total Score: 622.4-469.7\n",
-      "Total Point Differential: 152.7\n",
-      "Includes Playoffs: No\n",
-      "Includes Consolation: No\n",
-      "\n",
-      "10. Kevin's Incredible Team def. Miami Steamrollers\n",
-      "Total Score: 701.2-564.4\n",
-      "Total Point Differential: 136.8\n",
-      "Includes Playoffs: Yes\n",
-      "Includes Consolation: Yes\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Team Dominance Over Another Team (Lopsided Rivalry, Pure Dominance)\n",
@@ -13233,50 +13145,158 @@
     "  (but I guess you would only play a team once in the playoffs so if they played playoffs and non-conslation it guarantees there was only 1 matchup and it was real playoffs) - I think this statement is TRUE\n",
     "  (not sure if teams can play multiple times in consolation, sometimes consolation could be a ladder format where you can go up and down ex. ESPN fantasy)\n",
     "'''\n",
-    "matchup_dict = defaultdict(list)\n",
-    "for matchup in completed_matchups_data:\n",
-    "    key = frozenset([matchup['team1_key'], matchup['team2_key']])\n",
-    "    matchup_dict[key].append(matchup)\n",
-    "matchup_dict = dict(matchup_dict)\n",
+    "async def get_rivalry_dominance():\n",
+    "    completed_matchups_data = await query.get_matchup_data()\n",
+    "    matchup_dict = defaultdict(list)\n",
+    "    for matchup in completed_matchups_data:\n",
+    "        key = frozenset([matchup['team1_key'], matchup['team2_key']])\n",
+    "        matchup_dict[key].append(matchup)\n",
+    "    matchup_dict = dict(matchup_dict)\n",
+    "    season_matchup_stats = {}\n",
+    "    for matchup_combination in matchup_dict.keys():\n",
+    "        team1_total_points = 0\n",
+    "        team2_total_points = 0\n",
+    "        for matchup in matchup_dict[matchup_combination]:\n",
+    "            if matchup_combination in season_matchup_stats.keys() and matchup['team1_key'] == season_matchup_stats[matchup_combination]['team2_key']:\n",
+    "                team1_total_points += matchup['team2_points']\n",
+    "                team2_total_points += matchup['team1_points']\n",
+    "                season_matchup_stats[matchup_combination]['team1_total_points'] = round(team1_total_points, 2)\n",
+    "                season_matchup_stats[matchup_combination]['team2_total_points'] = round(team2_total_points, 2)\n",
+    "                season_matchup_stats[matchup_combination] = {\n",
+    "                    'team1_key' : matchup['team2_key'],\n",
+    "                    'team1_name' : matchup['team2_name'],\n",
+    "                    'team1_total_points' : round(team1_total_points, 2),\n",
+    "                    'team1_url' : matchup['team2_url'],\n",
+    "                    'team2_key' : matchup['team1_key'],\n",
+    "                    'team2_name' : matchup['team1_name'],\n",
+    "                    'team2_total_points' : round(team2_total_points, 2),\n",
+    "                    'team2_url' : matchup['team1_url'],\n",
+    "                    'incl_playoffs' : matchup['is_playoffs'],\n",
+    "                    'incl_consolation' :matchup['is_consolation']\n",
+    "                }\n",
+    "            else:\n",
+    "                team1_total_points += matchup['team1_points']\n",
+    "                team2_total_points += matchup['team2_points']\n",
+    "                season_matchup_stats[matchup_combination] = {\n",
+    "                    'team1_key' : matchup['team1_key'],\n",
+    "                    'team1_name' : matchup['team1_name'],\n",
+    "                    'team1_total_points' : round(team1_total_points, 2),\n",
+    "                    'team1_url' : matchup['team1_url'],\n",
+    "                    'team2_key' : matchup['team2_key'],\n",
+    "                    'team2_name' : matchup['team2_name'],\n",
+    "                    'team2_total_points' : round(team2_total_points, 2),\n",
+    "                    'team2_url' : matchup['team2_url'],\n",
+    "                    'incl_playoffs' : matchup['is_playoffs'],\n",
+    "                    'incl_consolation' :matchup['is_consolation']\n",
+    "                }\n",
+    "            season_matchup_stats[matchup_combination]['total_point_diff'] = round(season_matchup_stats[matchup_combination]['team1_total_points'] - season_matchup_stats[matchup_combination]['team2_total_points'], 2)\n",
+    "        if season_matchup_stats[matchup_combination]['total_point_diff'] < 0:\n",
+    "            team1_key_temp = season_matchup_stats[matchup_combination]['team1_key']\n",
+    "            team1_name_temp = season_matchup_stats[matchup_combination]['team1_name']\n",
+    "            team1_total_points_temp = season_matchup_stats[matchup_combination]['team1_total_points']\n",
+    "            team1_url_temp = season_matchup_stats[matchup_combination]['team1_url']\n",
+    "            season_matchup_stats[matchup_combination]['team1_key'] = season_matchup_stats[matchup_combination]['team2_key']\n",
+    "            season_matchup_stats[matchup_combination]['team1_name'] = season_matchup_stats[matchup_combination]['team2_name']\n",
+    "            season_matchup_stats[matchup_combination]['team1_total_points'] = season_matchup_stats[matchup_combination]['team2_total_points']\n",
+    "            season_matchup_stats[matchup_combination]['team1_url'] = season_matchup_stats[matchup_combination]['team2_url']\n",
+    "            season_matchup_stats[matchup_combination]['team2_key'] = team1_key_temp\n",
+    "            season_matchup_stats[matchup_combination]['team2_name'] = team1_name_temp\n",
+    "            season_matchup_stats[matchup_combination]['team2_total_points'] = team1_total_points_temp\n",
+    "            season_matchup_stats[matchup_combination]['team2_url'] = team1_url_temp\n",
+    "            season_matchup_stats[matchup_combination]['total_point_diff'] = abs(season_matchup_stats[matchup_combination]['total_point_diff'])\n",
+    "    season_matchup_stats_descen = sorted(season_matchup_stats.items(), key=lambda matchup: abs(matchup[1]['total_point_diff']), reverse=True)\n",
+    "    top_x = 10\n",
+    "    season_matchup_list = [\n",
+    "            {\n",
+    "            \"rank\": i+1,\n",
+    "            \"image_url\": season_matchup_stats_descen[i][1]['team1_url'],\n",
+    "            \"main_text\": f\"{season_matchup_stats_descen[i][1]['team1_name']} def. {season_matchup_stats_descen[i][1]['team2_name']}\",\n",
+    "            \"sub_text\": \"playoffs\" if season_matchup_stats_descen[i][1]['incl_playoffs'] else \"\",\n",
+    "            \"stat\": season_matchup_stats_descen[i][1]['total_point_diff']\n",
+    "            } for i in range(top_x)\n",
+    "        ]\n",
+    "    return {\"id\": \"rivalry_dominance\", \"data\": season_matchup_list}\n",
     "\n",
-    "season_matchup_stats = {}\n",
-    "for matchup_combination in matchup_dict.keys():\n",
-    "    team1_total_points = 0\n",
-    "    team2_total_points = 0\n",
-    "    for matchup in matchup_dict[matchup_combination]:\n",
-    "        team1_total_points += matchup['team1_points']\n",
-    "        team2_total_points += matchup['team2_points']\n",
-    "        season_matchup_stats[matchup_combination] = {\n",
-    "            'team1_key' : matchup['team1_key'],\n",
-    "            'team1_name' : matchup['team1_name'],\n",
-    "            'team1_total_points' : round(team1_total_points, 2),\n",
-    "            'team2_key' : matchup['team2_key'],\n",
-    "            'team2_name' : matchup['team2_name'],\n",
-    "            'team2_total_points' : round(team2_total_points, 2),\n",
-    "            'incl_playoffs' : matchup['is_playoffs'],\n",
-    "            'incl_consolation' :matchup['is_consolation']\n",
-    "        }\n",
-    "    season_matchup_stats[matchup_combination]['total_point_diff'] = round(season_matchup_stats[matchup_combination]['team1_total_points'] - season_matchup_stats[matchup_combination]['team2_total_points'], 2)\n",
-    "\n",
-    "sorted_season_matchup_stats = sorted(season_matchup_stats.items(), key=lambda matchup: abs(matchup[1]['total_point_diff']), reverse=True)\n",
-    "\n",
-    "top_x = 10\n",
-    "print('Some matchups were never fair from the start')\n",
-    "print('The most lopsided season matchups were...')\n",
-    "for i in range(top_x):\n",
-    "    if sorted_season_matchup_stats[i][1]['total_point_diff'] > 0:\n",
-    "        print(f\"{i+1}. {sorted_season_matchup_stats[i][1]['team1_name']} def. {sorted_season_matchup_stats[i][1]['team2_name']}\")\n",
-    "        print(f\"Total Score: {sorted_season_matchup_stats[i][1]['team1_total_points']}-{sorted_season_matchup_stats[i][1]['team2_total_points']}\") \n",
-    "        print(f\"Total Point Differential: {abs(sorted_season_matchup_stats[i][1]['total_point_diff'])}\")\n",
-    "        print(f\"Includes Playoffs: {'Yes' if sorted_season_matchup_stats[i][1]['incl_playoffs'] else 'No'}\")\n",
-    "        print(f\"Includes Consolation: {'Yes' if sorted_season_matchup_stats[i][1]['incl_consolation'] else 'No'}\")\n",
-    "    elif sorted_season_matchup_stats[i][1]['total_point_diff'] < 0:\n",
-    "        print(f\"{i+1}. {sorted_season_matchup_stats[i][1]['team2_name']} def. {sorted_season_matchup_stats[i][1]['team1_name']}\")\n",
-    "        print(f\"Total Score: {sorted_season_matchup_stats[i][1]['team2_total_points']}-{sorted_season_matchup_stats[i][1]['team1_total_points']}\") \n",
-    "        print(f\"Total Point Differential: {abs(sorted_season_matchup_stats[i][1]['total_point_diff'])}\")\n",
-    "        print(f\"Includes Playoffs: {'Yes' if sorted_season_matchup_stats[i][1]['incl_playoffs'] else 'No'}\")\n",
-    "        print(f\"Includes Consolation: {'Yes' if sorted_season_matchup_stats[i][1]['incl_consolation'] else 'No'}\")\n",
-    "    print('')"
+    "# print('Some matchups were never fair from the start')\n",
+    "# print('The most lopsided season matchups were...')\n",
+    "# for i in range(top_x):\n",
+    "#     print(f\"{i+1}. {season_matchup_stats_descen[i][1]['team1_name']} def. {season_matchup_stats_descen[i][1]['team2_name']}\")\n",
+    "#     print(f\"Total Score: {season_matchup_stats_descen[i][1]['team1_total_points']}-{season_matchup_stats_descen[i][1]['team2_total_points']}\") \n",
+    "#     print(f\"Total Point Differential: {abs(season_matchup_stats_descen[i][1]['total_point_diff'])}\")\n",
+    "#     print(f\"Includes Playoffs: {'Yes' if season_matchup_stats_descen[i][1]['incl_playoffs'] else 'No'}\")\n",
+    "#     print(f\"Includes Consolation: {'Yes' if season_matchup_stats_descen[i][1]['incl_consolation'] else 'No'}\")\n",
+    "#     print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'rivalry_dominance',\n",
+       " 'data': [{'rank': 1,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_12_k.png',\n",
+       "   'main_text': 'Eric’s a Bitch Team def. Miami Steamrollers',\n",
+       "   'sub_text': '',\n",
+       "   'stat': 210.7},\n",
+       "  {'rank': 2,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+       "   'main_text': \"Theodore's Poo Poo Hospital def. Kevin's Incredible Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 209.0},\n",
+       "  {'rank': 3,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
+       "   'main_text': \"Tim's Terrific Team def. Miami Steamrollers\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 180.8},\n",
+       "  {'rank': 4,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
+       "   'main_text': \"Cyrus's Cursed Team def. Kevin's Incredible Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 180.3},\n",
+       "  {'rank': 5,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_e.png',\n",
+       "   'main_text': \"eric's Awe-Inspiring Team def. adam2\",\n",
+       "   'sub_text': 'playoffs',\n",
+       "   'stat': 166.4},\n",
+       "  {'rank': 6,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+       "   'main_text': \"Theodore's Poo Poo Hospital def. Miami Steamrollers\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 166.2},\n",
+       "  {'rank': 7,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_5_t.png',\n",
+       "   'main_text': \"Theodore's Poo Poo Hospital def. adam2\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 165.4},\n",
+       "  {'rank': 8,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_9_c.png',\n",
+       "   'main_text': \"Cyrus's Cursed Team def. Miami Steamrollers\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 156.8},\n",
+       "  {'rank': 9,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_1_t.png',\n",
+       "   'main_text': \"Tim's Terrific Team def. Kevin's Incredible Team\",\n",
+       "   'sub_text': '',\n",
+       "   'stat': 152.7},\n",
+       "  {'rank': 10,\n",
+       "   'image_url': 'https://s.yimg.com/cv/apiv2/default/nhl/nhl_6_k.png',\n",
+       "   'main_text': \"Kevin's Incredible Team def. Miami Steamrollers\",\n",
+       "   'sub_text': 'playoffs',\n",
+       "   'stat': 136.8}]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics = Metrics(query)\n",
+    "await metrics.get_rivalry_dominance()"
    ]
   },
   {
